myK8S/wallabag/wallabag-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallabag
  namespace: personal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallabag
  template:
    metadata:
      labels:
        app: wallabag
    spec:
      containers:
        - name: wallabag
          image: wallabag/wallabag:latest
          resources:
            requests:
              cpu: 25m
              memory: 96Mi
            limits:
              memory: 256Mi
          ports:
            - containerPort: 80
          volumeMounts:
            - name: wallabag-storage
              mountPath: /var/www/html/web/assets/images
              subPath: images
      volumes:
        - name: wallabag-storage
          persistentVolumeClaim:
            claimName: wallabag-pvc
