myK8S/wallabag/wallabag-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallabag-svc
  namespace: personal
spec:
  selector:
    app: wallabag
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
