myK8S/wallabag/wallabag-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallabag-ingress
  namespace: personal
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod-cf"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "read.${BASE_DOMAIN}"
      secretName: wallabag-tls-secret
  rules:
    - host: "read.${BASE_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wallabag-svc
                port:
                  number: 80
